<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyFood">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8sp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/totalcals"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:text="@string/total"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="20sp"
            android:padding="5sp">

            <TextView
                android:id="@+id/timelabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="55sp"
                android:text="@string/time" />

            <TextView
                android:id="@+id/itemlabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="55sp"
                android:text="@string/item" />

            <TextView
                android:id="@+id/quantitylabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="55sp"
                android:text="@string/amount" />

            <TextView
                android:id="@+id/calorielabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/calcount" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/times"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/items"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/quantities"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/caloriecounts"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/newitembutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:text="@string/nutrition" />

        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>